# watt

./: .gitignore  LICENSE  README.md  compose.yaml
auth-svc/: Cargo.toml  Dockerfile
auth-svc/src/: auth.rs  config.rs  errors.rs  handlers.rs  jwt.rs  main.rs  messaging.rs  routes.rs  user.rs
device-simulator/: Cargo.toml  Dockerfile  config.example.json  config.json
device-simulator/src/: main.rs
device-svc/: Cargo.toml  Dockerfile
device-svc/src/: errors.rs  handlers.rs  main.rs  messaging.rs  models.rs  routes.rs
monitor-svc/: Cargo.toml  Dockerfile
monitor-svc/migrations/: 20251105000100_init.sql
monitor-svc/src/: config.rs  consumers.rs  db.rs  http.rs  main.rs  models.rs
user-svc/: Cargo.toml  Dockerfile
user-svc/migrations/: 20251104152245_create_users.sql
user-svc/src/: handlers.rs  main.rs  messaging.rs  middleware.rs  models.rs  routes.rs
web/: .dockerignore  Dockerfile  package-lock.json  package.json  proxy.ts  tailwind.config.ts
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
web/app/(auth)/: actions.ts  layout.tsx
web/app/(auth)/login/: LoginForm.tsx  page.tsx
web/app/(auth)/register/: page.tsx
web/app/(protected)/: actions.ts  layout.tsx
web/app/(protected)/admin/: actions.ts  page.tsx
web/app/(protected)/dashboard/: actions.ts  consumption-actions.ts  page.tsx
web/components/: AppShell.tsx  Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  FormField.tsx  Input.tsx  Loader.tsx  Modal.tsx  Select.tsx  Table.tsx  Tabs.tsx  Toast.tsx  ToastProvider.tsx
web/components/admin/: AdminConsole.tsx  DevicesTable.tsx  UsersTable.tsx
web/components/dashboard/: ConsumptionChart.tsx  DevicesTable.tsx  ProfileCard.tsx
web/lib/: api.ts  auth.ts  constants.ts  cookies.ts  server.ts  types.ts  utils.ts
