[package]
name = "auth-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
rand = "0.9.2"
reqwest ={ version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "macros", "chrono"] }
time = { version = "0.3.44", features = ["macros", "parsing", "formatting"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
