[package]
name = "device-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.42", features = ["serde"] }
lapin = { version = "2.4.0", default-features = false, features = ["rustls"] }
rand = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
