[package]
name = "device-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
