[package]
name = "monitor-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
lapin = { version = "2.4.0", default-features = false, features = ["serde_json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1.0.64"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
